fixed center alignment for mobile screen , corrected spellings and Css file updated

--- a/style.css
+++ b/style.css
@@ -4,3 +4,9 @@ nav{
 #logo{
     background-color: black;
 }
+a{
+    color:darkblue;
+}
+a:hover{
+    color: darkmagenta;
+}
